--- a/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/newyear/templates/newyear/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     {% if newyear %}
-    <h1>YES</h1>
+    <h1>YES IT IS</h1>
     {% else %}
-    <h1>NO</h1>
+    <h1>NO IT'S NOT</h1>
     {% endif %}
   </body>
 </html>
