--- a/lecture3/newyear/templates/newyear/index.html
+++ b/lecture3/newyear/templates/newyear/index.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Is it New Year's?</title>
+    <link rel="stylesheet" href="{% static 'newyear/styles.css' %}" />
   </head>
   <body>
     {% if newyear %}
