--- a/lecture3/tasks/templates/tasks/add.html
+++ b/lecture3/tasks/templates/tasks/add.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Tasks</title>
-  </head>
-  <body>
-    <h1>Add Task</h1>
-    <form action="">
-      <input type="text" name="task" />
-      <input type="submit" />
-    </form>
-  </body>
-</html>
+{% extends "tasks/layout.html" %} {% block body %}
+<h1>Add Task</h1>
+<form action="">
+  <input type="text" name="task" />
+  <input type="submit" />
+</form>
+{% endblock %}
