--- a/lecture3/tasks/templates/tasks/index.html
+++ b/lecture3/tasks/templates/tasks/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Tasks</title>
-  </head>
-  <body>
-    <ul>
-      {% for task in tasks %}
-      <li>{{ task }}</li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends "tasks/layout.html" %} {% block body %}
+<h1>Tasks</h1>
+<ul>
+  {% for task in tasks %}
+  <li>{{ task }}</li>
+  {% endfor %}
+</ul>
+{% endblock %}
