--- a/lecture3/tasks/templates/tasks/add.html
+++ b/lecture3/tasks/templates/tasks/add.html
@@ -4,4 +4,5 @@
   <input type="text" name="task" />
   <input type="submit" />
 </form>
+<a href="{% url 'tasks:index' %}">Go to List</a>
 {% endblock %}
