--- a/lecture3/tasks/templates/tasks/add.html
+++ b/lecture3/tasks/templates/tasks/add.html
@@ -1,8 +1,7 @@
 {% extends "tasks/layout.html" %} {% block body %}
 <h1>Add Task</h1>
 <form action="{% url 'tasks:add' %}" method="POST">
-  {% csrf_token %}
-  <input type="text" name="task" />
+  {% csrf_token %} {{ form }}
   <input type="submit" />
 </form>
 <a href="{% url 'tasks:index' %}">Go to List</a>
